--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,7 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
+            token: ${{ secrets.METRICS_TOKEN }}
+            plugin_languages: yes
+            plugin_languages_indepth: yes
+            commits_authoring: firstname lastname, username, username@users.noreply.github.com
