--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,12 @@
-name: Metrics
-on:
-  # Schedule daily updates
-  schedule: [{cron: "0 0 * * *"}]
-  # (optional) Run workflow manually
-  workflow_dispatch:
-  # (optional) Run workflow when pushing on master/main
-  push: {branches: ["master", "main"]}
-jobs:
-  github-metrics:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - uses: lowlighter/metrics@latest
-        with:
-            token: ${{ secrets.METRICS_TOKEN }}
-            plugin_languages: yes
-            plugin_languages_indepth: yes
-            commits_authoring: firstname lastname, username, username@users.noreply.github.com
+name: Example
+uses: lowlighter/metrics@latest
+with:
+  template: repository
+  filename: metrics.repository.svg
+  token: ${{ secrets.METRICS_TOKEN_WITH_SCOPES }}
+  user: lowlighter
+  repo: metrics
+  plugin_lines: yes
+  plugin_followup: yes
+  plugin_projects: yes
+  plugin_projects_repositories: lowlighter/metrics/projects/1
