--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,3 +10,16 @@ with:
   plugin_followup: yes
   plugin_projects: yes
   plugin_projects_repositories: lowlighter/metrics/projects/1
+
+
+name: Featured star list languages
+uses: lowlighter/metrics@latest
+with:
+  filename: metrics.plugin.starlists.languages.svg
+  token: NOT_NEEDED
+  base: ""
+  plugin_starlists: yes
+  plugin_starlists_languages: yes
+  plugin_starlists_limit_languages: 8
+  plugin_starlists_limit_repositories: 0
+  plugin_starlists_only: Awesome
