--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,11 @@
-name: Example
+name: Featured star list languages
 uses: lowlighter/metrics@latest
 with:
-  template: repository
-  filename: metrics.repository.svg, metrics.plugin.starlists.languages.svg
-  token: ${{ secrets.METRICS_TOKEN_WITH_SCOPES }}
-  user: lowlighter
-  repo: metrics
-  plugin_lines: yes
-  plugin_followup: yes
+  filename: metrics.plugin.starlists.languages.svg
+  token: NOT_NEEDED
+  base: ""
   plugin_starlists: yes
-  plugin_projects: yes
   plugin_starlists_languages: yes
   plugin_starlists_limit_languages: 8
-  plugin_projects_repositories: lowlighter/metrics/projects/1
+  plugin_starlists_limit_repositories: 0
   plugin_starlists_only: Awesome
