--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,13 @@
-- name: Featured star list
+steps:
+  - uses: lowlighter/metrics@latest
+    with:
+      token: ${{ secrets.METRICS_TOKEN }}
+        token: ${{ secrets.METRICS_TOKEN }}
+        plugin_languages: yes
+        plugin_languages_indepth: yes
+        commits_authoring: firstname lastname, username, username@users.noreply.github.com
+
+  name: Featured star list
   uses: lowlighter/metrics@latest
   with:
     filename: metrics.plugin.starlists.svg
