--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,22 +30,16 @@ jobs:
           plugin_projects: yes
           plugin_projects_repositories: RP-developer-01/shopPhp
           
-      - name: Example (pdf output)
+      - name: Featured star list languages
         uses: lowlighter/metrics@latest
         with:
-          template: markdown
-          markdown_cache: .cache
-          filename: metrics.markdown.pdf
-          markdown: >-
-            https://raw.githubusercontent.com/lowlighter/metrics/master/source/templates/markdown/example.pdf.md
-          config_output: markdown-pdf
-          plugin_rss: yes
-          plugin_activity: yes
-          plugin_rss_source: https://news.ycombinator.com/rss
-          plugin_rss_limit: 4
-          plugin_isocalendar: yes
-          config_twemoji: yes
-          config_padding: 5%
-          token: ${{ secrets.METRICS_TOKEN }}
+          filename: metrics.plugin.starlists.languages.svg
+          token: NOT_NEEDED
+          base: ""
+          plugin_starlists: yes
+          plugin_starlists_languages: yes
+          plugin_starlists_limit_languages: 8
+          plugin_starlists_limit_repositories: 0
+          plugin_starlists_only: Awesome
 
     
