--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,9 +35,10 @@ jobs:
         with:
           filename: metrics.plugin.starlists.languages.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          base: ""
           plugin_starlists: yes
           plugin_starlists_languages: yes
+          plugin_starlists_only: Awesome
+
 
 
     
