--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,8 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           plugin_starlists: yes
           plugin_starlists_languages: yes
-          plugin_starlists_only: Awesome
+          plugin_starlists_limit_languages: 8
+          plugin_starlists_limit_repositories: 0
 
 
 
